<resources>
    <string name="app_name">CAC</string>

    <string name="default_text">deadbeef</string>
    <string name="header_title">Lunghwa C.A.C. Shanghai 1943-1945 Visitors\' Guide</string>
    <string name="action_settings">Settings</string>

    <!-- Resources -->
    <string name="close">Close</string>

    <!-- Start Page Resources -->
    <string name="start_title">Civilian Assembly Center</string>

    <!-- Main Page Resources -->
    <string name="main_btnAbout">About\nCAC</string>
    <string name="main_btnList">Bldg\nList</string>
    <string name="main_btnBettyBarr">Betty\nBarr</string>
    <string name="main_btnJG">JG \nBallard</string>
    <string name="main_btnCredits">Credits</string>

    <!-- Description Dialog Resources -->

    <!-- Welcome Page Resources -->
    <string name="welcome_title">What is CAC?</string>
    <string name="welcome_text">Welcome to Shanghai High School International Division, the site of the Lunghua Civilian Assembly Centre, one of the Japanese internment camps for allied civilians during World War II.</string>

    <string name="gate_title">1) 989 Baise Road Gate</string>
    <string name="btnIndexGate">1</string>

    <string name="art_title">2) Art Building</string>
    <string name="btnIndexArt">2</string>

    <string name="cafeteria_title">3) Student Cafeteria</string>
    <string name="btnIndexCafe">3</string>

    <string name="barracks_title">4) Former Guards\' Barracks</string>
    <string name="btnIndexBarracks">4</string>

    <string name="pool_title">5) Swimming Pool/former G Block</string>
    <string name="btnIndexPool">5</string>

    <string name="assembly_title">6) Auditorium / Assembly Center</string>
    <string name="btnIndexAssembly">6</string>

    <string name="longMian_title">7) LongMian Building</string>
    <string name="btnIndexLongMian">7</string>

    <string name="xianMian_title">8) XianMian Building</string>
    <string name="btnIndexXianMian">8</string>

    <string name="finance_title">9) Finance Building + Admissions Office</string>
    <string name="btnIndexFinance">9</string>

    <!-- BuidlingList Page Resources -->
    <string name="buildingList_title">Building List</string>

    <string name="betty_barr_title">Betty Barr Sound Bites</string>
    <string name="betty_barr_sound_bite_title_1_hello">Hello</string>
    <string name="betty_barr_sound_bite_title_2_food">Food</string>
    <string name="betty_barr_sound_bite_title_3_thanks">Thanks</string>
    <string name="betty_barr_sound_bite_title_4_daily_life">Daily Life in Lunghwa</string>
    <string name="betty_barr_sound_bite_title_5_1945">July/August 1945</string>
    <string name="betty_barr_sound_bite_title_6_memories">Betty\'s Favorite Memories</string>
    <string name="betty_barr_sound_bite_title_7_home">Betty\'s Home in G Block</string>
    <string name="betty_barr_sound_bite_title_8_japanese">The Japanese</string>

    <string name="jg_title">JG Ballard</string>
    <string name="credits_title">Credits</string>

</resources>
