<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.shsid.bktronze.cac.ZoomLayout
        android:id="@+id/mainMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/cac_current_map" />

            <ImageView
                android:id="@+id/btnArt"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/cac_btn_art"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="203dp"
                android:layout_marginStart="203dp"
                android:layout_marginTop="57dp" />

            <ImageView
                android:id="@+id/btnAuditorium"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/cac_btn_assembly"
                android:layout_marginTop="32dp"
                android:layout_below="@+id/btnArt"
                android:layout_toRightOf="@+id/btnArt"
                android:layout_toEndOf="@+id/btnArt" />

            <ImageView
                android:id="@+id/btnFinance"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/cac_btn_finance"
                android:layout_alignTop="@+id/btnAuditorium"
                android:layout_toRightOf="@+id/btnLongmian"
                android:layout_toEndOf="@+id/btnLongmian"
                android:layout_marginLeft="45dp"
                android:layout_marginStart="45dp" />

            <ImageView
                android:id="@+id/btnLongmian"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/cac_btn_longmen"
                android:layout_below="@+id/btnAuditorium"
                android:layout_toRightOf="@+id/btnAuditorium"
                android:layout_toEndOf="@+id/btnAuditorium" />

            <ImageView
                android:id="@+id/btnXianmian"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/cac_btn_xianmian"
                android:layout_below="@+id/btnLongmian"
                android:layout_toRightOf="@+id/btnFinance"
                android:layout_toEndOf="@+id/btnFinance"
                android:layout_marginLeft="45dp"
                android:layout_marginStart="45dp" />

        </RelativeLayout>

    </com.shsid.bktronze.cac.ZoomLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_btnAbout"
            android:id="@+id/mainBtnAbout"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_btnList"
            android:id="@+id/mainBtnList"
            android:layout_marginRight="5dp"
            android:background="@drawable/button"
            android:layout_alignTop="@+id/btnArt"
            android:layout_alignParentEnd="true"
 />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_btnBettyBarr"
            android:id="@+id/mainBtnBettyBarr"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button"
            android:layout_below="@+id/mainBtnList"
            android:layout_alignParentEnd="true" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_btnJG"
            android:id="@+id/mainBtnJG"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button"
            android:layout_below="@+id/mainBtnList"
            android:layout_alignParentEnd="true" />
    </LinearLayout>

</FrameLayout>